--- a/_data/langs/en.yml
+++ b/_data/langs/en.yml
@@ -1,7 +1,7 @@
 icon: 🇺🇸
 name: 'English'
 
-sitename: '📅 Emoji Calendar'
+sitename: 'Emoji Calendar'
 
 ad: 'Advertising'
 contact_us: 'Contact us'
