--- a/_data/langs/ru.yml
+++ b/_data/langs/ru.yml
@@ -1,7 +1,7 @@
 icon: 🇷🇺
 name: 'Русский'
 
-sitename: '📅 Эмодзи Календарь'
+sitename: 'Эмодзи Календарь'
 
 ad: 'Реклама'
 contact_us: 'Связаться с нами'
