added contact method

--- a/_data/langs/en.yml
+++ b/_data/langs/en.yml
@@ -33,4 +33,4 @@ week_6: 'Su'
 
 today: 'Today'
 
-add_date: 'If you want to add a known date to your calendar please contact <a href="https://t.me/tophackr" target="_blank">telegram</a>'
+add_date: 'If you want to add a known date to your calendar please contact <a href="https://t.me/tophackr" target="_blank">telegram</a> or <a href="mailto:tophackr@icloud.com">email</a>'
