--- a/_data/langs/ru.yml
+++ b/_data/langs/ru.yml
@@ -33,4 +33,4 @@ week_6: 'Вс'
 
 today: 'Сегодня'
 
-add_date: 'Если вы хотите добавить известную дату в календарь свяжитесь по <a href="https://t.me/tophackr" target="_blank">telegram</a>'
+add_date: 'Если вы хотите добавить известную дату в календарь свяжитесь по <a href="https://t.me/tophackr" target="_blank">telegram</a> или <a href="mailto:tophackr@icloud.com">email</a>'
