--- a/📣.md
+++ b/📣.md
@@ -13,4 +13,4 @@ or buy a custom banner background
 
 ---
 
-about advertising you can write in [telegram](https://t.me/tophackr) or [email](mailto:tophackr.com)
+about advertising you can write in [telegram](https://t.me/tophackr){: target="_blank" } or [email](mailto:tophackr.com)
