--- a/_data/langs/en.yml
+++ b/_data/langs/en.yml
@@ -4,11 +4,13 @@ name: 'English'
 sitename: 'Emoji Calendar'
 
 ad: 'Advertising'
+add_date: 'Add date'
 contact_us: 'Contact us'
 translate: 'Translate'
 
-calendar_on_1: 'Calendar for '
+calendar_on_1: 'Calendar for'
 calendar_on_2: ''
+calendar_on_3: ''
 
 month_0:  'January'
 month_1:  'February'
@@ -23,6 +25,19 @@ month_9:  'October'
 month_10: 'November'
 month_11: 'December'
 
+month_0_1:  'January'
+month_1_1:  'February'
+month_2_1:  'March'
+month_3_1:  'April'
+month_4_1:  'May'
+month_5_1:  'June'
+month_6_1:  'July'
+month_7_1:  'August'
+month_8_1:  'September'
+month_9_1:  'October'
+month_10_1: 'November'
+month_11_1: 'December'
+
 week_0: 'Mo'
 week_1: 'Tu'
 week_2: 'We'
@@ -31,6 +46,16 @@ week_4: 'Fr'
 week_5: 'Sa'
 week_6: 'Su'
 
-today: 'Today'
+week_0_1: 'Monday'
+week_1_1: 'Tuesday'
+week_2_1: 'Wednesday'
+week_3_1: 'Thursday'
+week_4_1: 'Friday'
+week_5_1: 'Saturday'
+week_6_1: 'Sunday'
 
-add_date: 'If you want to add a known date to your calendar please contact <a href="https://t.me/tophackr" target="_blank">telegram</a> or <a href="mailto:tophackr@icloud.com">email</a>'
+yesterday: 'Yesterday'
+today: 'Today'
+tomorrow: 'Tomorrow'
+
+without_date: 'No holidays'
