--- a/_data/langs/ru.yml
+++ b/_data/langs/ru.yml
@@ -4,11 +4,13 @@ name: 'Русский'
 sitename: 'Эмодзи Календарь'
 
 ad: 'Реклама'
+add_date: 'Добавить дату'
 contact_us: 'Связаться с нами'
 translate: 'Перевести'
 
-calendar_on_1: 'Календарь на '
-calendar_on_2: ' год'
+calendar_on_1: 'Календарь на'
+calendar_on_2: 'год'
+calendar_on_3: ' года'
 
 month_0:  'Январь'
 month_1:  'Февраль'
@@ -23,6 +25,19 @@ month_9:  'Октябрь'
 month_10: 'Ноябрь'
 month_11: 'Декабрь'
 
+month_0_1:  'Января'
+month_1_1:  'Февраля'
+month_2_1:  'Марта'
+month_3_1:  'Апреля'
+month_4_1:  'Мая'
+month_5_1:  'Июня'
+month_6_1:  'Июля'
+month_7_1:  'Августа'
+month_8_1:  'Сентября'
+month_9_1:  'Октября'
+month_10_1: 'Ноября'
+month_11_1: 'Декабря'
+
 week_0: 'Пн'
 week_1: 'Вт'
 week_2: 'Ср'
@@ -31,6 +46,16 @@ week_4: 'Пт'
 week_5: 'Сб'
 week_6: 'Вс'
 
-today: 'Сегодня'
+week_0_1: 'Понедельник'
+week_1_1: 'Вторник'
+week_2_1: 'Среда'
+week_3_1: 'Четверг'
+week_4_1: 'Пятница'
+week_5_1: 'Суббота'
+week_6_1: 'Воскресенье'
 
-add_date: 'Если вы хотите добавить известную дату в календарь свяжитесь по <a href="https://t.me/tophackr" target="_blank">telegram</a> или <a href="mailto:tophackr@icloud.com">email</a>'
+yesterday: 'Вчера'
+today: 'Сегодня'
+tomorrow: 'Завтра'
+
+without_date: 'Праздников нет'
