added change_lang line

--- a/_data/langs/en.yml
+++ b/_data/langs/en.yml
@@ -6,6 +6,7 @@ sitename: 'Emoji Calendar'
 ad: 'Advertising'
 add_date: 'Add date'
 contact_us: 'Contact us'
+change_lang: 'Change language'
 translate: 'Translate'
 
 calendar_on_1: 'Calendar for'
