--- a/_data/langs/ru.yml
+++ b/_data/langs/ru.yml
@@ -6,6 +6,7 @@ sitename: 'Эмодзи Календарь'
 ad: 'Реклама'
 add_date: 'Добавить дату'
 contact_us: 'Связаться с нами'
+change_lang: 'Изменить язык'
 translate: 'Перевести'
 
 calendar_on_1: 'Календарь на'
