added image for post

--- a/_posts/1970-12-31-ru.md
+++ b/_posts/1970-12-31-ru.md
@@ -5,9 +5,11 @@ permalink: '/🇷🇺/12-31/'
 date: 31.dec
 year: false
 category: 'Праздники'
+image: 'assets/dates/u9dhj3pht3pt38o38ux1je76.png'
 author:
-    name: 'tophackr'
+    name: 'Alexandr Musikhin'
     email: 'tophackr@icloud.com'
+    twitter: tophackr_com
 ---
 
 **Новый год** — главный календарный праздник, наступающий в момент перехода с последнего дня года в первый день следующего года. Отмечается многими народами в соответствии с принятым календарём.
