--- a/_posts/1970-01-02-ru.md
+++ b/_posts/1970-01-02-ru.md
@@ -1,6 +1,7 @@
 ---
 layout: date
 title: 'Второй день Нового года'
+description: 'Второй день Нового года'
 permalink: '/🇷🇺/01-02/'
 date: 02.jan
 year: false
